SERVER-48541 Fix log output on rollback of fcv document